--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -38,9 +38,8 @@
               <li><a href="{{ BASE_PATH }}/about.html">about</a></li>
               <li><a href="{{ BASE_PATH }}/pubs.html">publications</a></li>
               <li><a href="{{ BASE_PATH }}/talks.html">talks</a></li>
-              <li><a href="{{ BASE_PATH }}/software.html">software</a></li>
               <li><a href="{{ BASE_PATH }}/teaching.html">teaching</a></li>
-              <li><a href="{{ BASE_PATH }}/tutorials.html">tutorials</a></li>
+              <li><a href="{{ BASE_PATH }}/resources.html">resources</a></li>
           </ul>
         </div>
       </div>
