--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -36,6 +36,7 @@
           <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
           <ul class="nav">
               <li><a href="{{ BASE_PATH }}/about.html">about</a></li>
+              <li><a href="{{ BASE_PATH }}/blog">blog</a></li>
               <li><a href="{{ BASE_PATH }}/pubs.html">publications</a></li>
               <li><a href="{{ BASE_PATH }}/talks.html">talks</a></li>
               <li><a href="{{ BASE_PATH }}/teaching.html">teaching</a></li>
